--- a/vercel.json
+++ b/vercel.json
@@ -17,7 +17,7 @@
         {
           "type": "header",
           "key": "User-Agent",
-          "value": "/Visual Studio Code (.+?)/"
+          "value": "Visual Studio Code (desktop)"
         }
       ]
     }
