--- a/package.json
+++ b/package.json
@@ -3,22 +3,26 @@
   "type": "module",
   "private": true,
   "scripts": {
-    "dev": "vite",
-    "build": "vue-tsc && vite build",
-    "preview": "vite preview"
+    "build": "nuxt build",
+    "dev": "nuxt dev",
+    "generate": "nuxt generate",
+    "preview": "nuxt preview",
+    "postinstall": "nuxt prepare"
   },
   "dependencies": {
-    "@unocss/reset": "^0.56.0",
-    "vue": "^3.3.4"
+    "@vercel/analytics": "^1.0.2"
   },
   "devDependencies": {
     "@luxass/eslint-config": "^3.3.2",
-    "@vitejs/plugin-vue": "^4.3.4",
+    "@nuxt/devtools": "latest",
+    "@unocss/nuxt": "^0.56.4",
+    "@vueuse/nuxt": "^10.4.1",
     "eslint": "^8.49.0",
+    "nuxt": "^3.7.4",
+    "nuxt-icon": "^0.5.0",
     "shikiji": "^0.6.8",
     "typescript": "^5.2.2",
-    "unocss": "^0.56.0",
-    "vite": "^4.4.9",
-    "vue-tsc": "^1.8.11"
+    "vue": "^3.3.4",
+    "vue-router": "^4.2.5"
   }
 }
