--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "devDependencies": {
     "@luxass/eslint-config": "^3.3.2",
     "@nuxt/devtools": "latest",
+    "@nuxtjs/html-validator": "^1.5.2",
     "@unocss/nuxt": "^0.56.4",
     "@vueuse/nuxt": "^10.4.1",
     "eslint": "^8.50.0",
