fix: i really don't know what i fixed

--- a/vercel.json
+++ b/vercel.json
@@ -4,11 +4,11 @@
   "rewrites": [
     {
       "source": "/schema.json",
-      "destination": "/assets/schema.json"
+      "destination": "/api/schema"
     },
     {
       "source": "/schema",
-      "destination": "/assets/schema.json"
+      "destination": "/api/schema"
     }
   ]
 }
