--- a/package.json
+++ b/package.json
@@ -11,7 +11,12 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
-    "@vercel/analytics": "^1.0.2"
+    "@octokit/graphql": "^7.0.2",
+    "@sinclair/typebox": "^0.31.17",
+    "@vercel/analytics": "^1.0.2",
+    "ajv": "^8.12.0",
+    "ajv-formats": "^2.1.1",
+    "github-schema": "^1.0.0"
   },
   "devDependencies": {
     "@luxass/eslint-config": "^3.3.2",
