--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "projectrc.luxass.dev",
   "type": "module",
   "private": true,
-  "packageManager": "pnpm@8.8.0",
+  "packageManager": "pnpm@8.9.0",
   "scripts": {
     "build": "nuxt build",
     "dev": "nuxt dev",
@@ -13,18 +13,21 @@
   "dependencies": {
     "@octokit/graphql": "^7.0.2",
     "@sinclair/typebox": "^0.31.17",
-    "@vercel/analytics": "^1.0.2",
+    "@vercel/analytics": "^1.1.0",
     "ajv": "^8.12.0",
     "ajv-formats": "^2.1.1",
     "github-schema": "^1.0.0"
   },
   "devDependencies": {
     "@luxass/eslint-config": "^3.3.2",
-    "@nuxt/devtools": "latest",
-    "@unocss/nuxt": "^0.56.4",
-    "eslint": "^8.50.0",
+    "@nuxt/devtools": "^0.8.5",
+    "@unocss/nuxt": "^0.56.5",
+    "@vueuse/nuxt": "^10.5.0",
+    "nuxt-og-image": "^2.1.1",
+    "eslint": "^8.51.0",
     "nuxt": "^3.7.4",
-    "shikiji": "^0.6.8",
+    "nuxt-icon": "^0.5.0",
+    "shikiji": "^0.6.10",
     "typescript": "^5.2.2",
     "vue": "^3.3.4",
     "vue-router": "^4.2.5"
