--- a/package.json
+++ b/package.json
@@ -2,17 +2,20 @@
   "name": "projectrc.luxass.dev",
   "type": "module",
   "private": true,
-  "packageManager": "pnpm@8.9.0",
+  "packageManager": "pnpm@8.9.2",
   "scripts": {
     "build": "nuxt build",
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
+    "postinstall": "nuxt prepare",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix",
+    "test": "vitest"
   },
   "dependencies": {
     "@octokit/graphql": "^7.0.2",
-    "@sinclair/typebox": "^0.31.17",
+    "@sinclair/typebox": "^0.31.18",
     "@vercel/analytics": "^1.1.1",
     "ajv": "^8.12.0",
     "ajv-formats": "^2.1.1",
@@ -20,15 +23,16 @@
   },
   "devDependencies": {
     "@luxass/eslint-config": "^3.3.2",
-    "@nuxt/devtools": "^0.8.5",
+    "@nuxt/devtools": "^1.0.0",
     "@unocss/nuxt": "^0.56.5",
     "@vueuse/nuxt": "^10.5.0",
     "eslint": "^8.51.0",
     "nuxt": "^3.7.4",
     "nuxt-icon": "^0.5.0",
-    "nuxt-og-image": "^2.1.2",
+    "nuxt-og-image": "^2.1.3",
     "shikiji": "^0.6.10",
     "typescript": "^5.2.2",
+    "vitest": "^0.34.6",
     "vue": "^3.3.4",
     "vue-router": "^4.2.5"
   }
