chore: testing rewrites

--- a/vercel.json
+++ b/vercel.json
@@ -9,6 +9,10 @@
     {
       "source": "/schema",
       "destination": "/api/schema"
+    },
+    {
+      "source": "/test",
+      "destination": "/api/schema"
     }
   ]
 }
