--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "devDependencies": {
     "@luxass/eslint-config": "^3.3.2",
+    "@nuxt/devtools": "latest",
     "@unocss/nuxt": "^0.56.5",
     "@vueuse/nuxt": "^10.5.0",
     "eslint": "^8.52.0",
