--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: ci
+name: CI
 
 on:
   pull_request:
@@ -7,6 +7,10 @@ on:
   push:
     branches:
       - main
+
+env:
+  FORCE_COLOR: true
+
 
 jobs:
   lint:
@@ -25,6 +29,9 @@ jobs:
 
       - name: 🔠 Lint project
         run: pnpm lint
+
+      - name: ✅ TypeCheck project
+        run: pnpm typecheck
 
   test:
     runs-on: ubuntu-latest
