--- a/package.json
+++ b/package.json
@@ -1,40 +1,46 @@
 {
-  "name": "projectrc.luxass.dev",
+  "name": "@luxass/projectrc-monorepo",
   "type": "module",
   "private": true,
-  "packageManager": "pnpm@8.10.0",
-  "scripts": {
-    "build": "nuxt build",
-    "dev": "nuxt dev",
-    "generate": "nuxt generate",
-    "preview": "nuxt preview",
-    "postinstall": "nuxt prepare",
-    "lint": "eslint .",
-    "lint:fix": "eslint . --fix",
-    "test": "vitest",
-    "typecheck": "tsc --noEmit"
+  "packageManager": "pnpm@8.9.2",
+  "description": "Monorepo for @luxass/projectrc",
+  "author": {
+    "name": "Lucas Nørgård",
+    "email": "lucasnrgaard@gmail.com",
+    "url": "https://luxass.dev"
   },
-  "dependencies": {
-    "@octokit/graphql": "^7.0.2",
-    "@sinclair/typebox": "^0.31.20",
-    "@vercel/analytics": "^1.1.1",
-    "ajv": "^8.12.0",
-    "ajv-formats": "^2.1.1",
-    "github-schema": "^1.0.0"
+  "license": "MIT",
+  "homepage": "https://github.com/luxass/projectrc",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/luxass/projectrc",
+    "directory": "www"
+  },
+  "bugs": {
+    "url": "https://github.com/luxass/projectrc/issues"
+  },
+  "workspaces": [
+    "www",
+    "packages/*"
+  ],
+  "engines": {
+    "node": ">=18"
+  },
+  "scripts": {
+    "build": "turbo run build",
+    "dev": "turbo run dev --concurrency=40 --parallel",
+    "lint": "turbo run lint",
+    "test": "turbo run test",
+    "lint:fix": "turbo run lint:fix",
+    "typecheck": "turbo run typecheck"
   },
   "devDependencies": {
     "@luxass/eslint-config": "^3.3.2",
-    "@nuxt/devtools": "latest",
-    "@unocss/nuxt": "^0.57.1",
-    "@vueuse/nuxt": "^10.5.0",
+    "@types/node": "^18.16.19",
     "eslint": "^8.52.0",
-    "nuxt": "^3.8.0",
-    "nuxt-icon": "^0.6.1",
-    "nuxt-og-image": "^2.2.0",
-    "shikiji": "^0.6.10",
+    "tsup": "^7.2.0",
+    "turbo": "^1.10.16",
     "typescript": "^5.2.2",
-    "vitest": "^0.34.6",
-    "vue": "^3.3.7",
-    "vue-router": "^4.2.5"
+    "vitest": "^0.34.6"
   }
 }
