fix: add .turbo to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,25 +1,20 @@
-# Nuxt dev/build outputs
+# misc
+node_modules
+.DS_Store
+*.tsbuildinfo
+
+# build outputs
 .output
 .data
 .nuxt
 .nitro
-.cache
 dist
+.turbo
+.vercel
+build
+out
 
-# Node dependencies
-node_modules
-
-# Logs
-logs
-*.log
-
-# Misc
-.DS_Store
-.fleet
-.idea
-
-# Local env files
+# env
 .env
 .env.*
 !.env.example
-.vercel
