--- a/.github/.projectrc
+++ b/.github/.projectrc
@@ -1,4 +1,7 @@
 {
   "$schema": "https://projectrc.luxass.dev/schema",
-  "website": true
+  "website": true,
+  "handles": [
+    "/projectrc"
+  ]
 }
