--- a/www/package.json
+++ b/www/package.json
@@ -23,6 +23,7 @@
   },
   "devDependencies": {
     "@nuxt/devtools": "latest",
+    "@nuxtjs/color-mode": "^3.3.0",
     "@unocss/nuxt": "^0.57.1",
     "@vueuse/nuxt": "^10.5.0",
     "nuxt": "^3.8.0",
