--- a/turbo.json
+++ b/turbo.json
@@ -5,7 +5,8 @@
       "outputs": [
         "dist/**",
         ".nuxt/dist/**",
-        ".output/**"
+        ".output/**",
+        ".vercel/**"
       ],
       "dependsOn": ["^build"],
       "outputMode": "new-only"
