--- a/.github/workflows/schema-changes.yml
+++ b/.github/workflows/schema-changes.yml
@@ -7,6 +7,9 @@ on:
 jobs:
   comment:
     if: ${{ github.event.label.name == '🚨 schema' && github.repository_owner == 'luxass' }}
+    permissions:
+      issues: write
+      pull-requests: write
     runs-on: ubuntu-latest
     steps:
       - uses: actions/github-script@v6
