--- a/.github/workflows/schema-changes.yml
+++ b/.github/workflows/schema-changes.yml
@@ -29,6 +29,7 @@ jobs:
       - uses: actions/github-script@v6
         if: ${{ steps.changed-files.outputs.any_changed == 'true' }}
         with:
+          github-token: ${{ secrets.ROBOBUB_TOKEN }}
           script: |
             github.rest.issues.createComment({
               issue_number: context.issue.number,
