--- a/.github/workflows/schema-changes.yml
+++ b/.github/workflows/schema-changes.yml
@@ -20,11 +20,10 @@ jobs:
         id: changed-files
         uses: tj-actions/changed-files@v40
         with:
-          files_yaml: |
-            schema:
-              - 'packages/projectrc/schema.json'
-              - 'scripts/update-schema.ts'
-              - 'packages/projectrc/src/schema.ts'
+          files: |
+            packages/projectrc/schema.json
+            scripts/update-schema.ts
+            packages/projectrc/src/schema.ts
 
       - uses: actions/github-script@v6
         if: ${{ steps.changed-files.outputs.any_changed == 'true' }}
