--- a/.github/workflows/label.yml
+++ b/.github/workflows/label.yml
@@ -15,5 +15,5 @@ jobs:
     steps:
     - uses: actions/labeler@v4
       with:
-        repo-token: ${{ secrets.ROBOBUB_TOKEN }}
+        repo-token: ${{ secrets.GITHUB_TOKEN }}
         sync-labels: true
