--- a/packages/projectrc/package.json
+++ b/packages/projectrc/package.json
@@ -39,6 +39,16 @@
         "default": "./dist/schema.cjs"
       }
     },
+    "./utils": {
+      "import": {
+        "types": "./dist/utils.d.ts",
+        "default": "./dist/utils.mjs"
+      },
+      "require": {
+        "types": "./dist/utils.d.cts",
+        "default": "./dist/utils.cjs"
+      }
+    },
     "./json-schema": "./schema.json",
     "./package.json": "./package.json"
   },
