--- a/package.json
+++ b/package.json
@@ -37,12 +37,13 @@
   "devDependencies": {
     "@luxass/eslint-config": "^3.3.2",
     "@sinclair/typebox": "^0.31.22",
-    "@types/node": "^18.16.19",
+    "@types/node": "^18.18.8",
+    "dotenv": "^16.3.1",
     "eslint": "^8.53.0",
-    "msw": "^2.0.3",
     "tsup": "^7.2.0",
     "turbo": "^1.10.16",
     "typescript": "^5.2.2",
-    "vitest": "^0.34.6"
+    "vitest": "^0.34.6",
+    "vitest-fetch-mock": "^0.2.2"
   }
 }
