--- a/packages/projectrc/package.json
+++ b/packages/projectrc/package.json
@@ -39,16 +39,6 @@
         "default": "./dist/schema.cjs"
       }
     },
-    "./utils": {
-      "import": {
-        "types": "./dist/utils.d.ts",
-        "default": "./dist/utils.mjs"
-      },
-      "require": {
-        "types": "./dist/utils.d.cts",
-        "default": "./dist/utils.cjs"
-      }
-    },
     "./json-schema": "./schema.json",
     "./package.json": "./package.json"
   },
@@ -62,7 +52,7 @@
   "scripts": {
     "build": "tsup",
     "dev": "tsup --watch",
-    "test": "vitest --run",
+    "test": "vitest",
     "lint": "eslint .",
     "typecheck": "tsc --noEmit"
   },
