--- a/packages/projectrc/package.json
+++ b/packages/projectrc/package.json
@@ -57,11 +57,12 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "@gcornut/valibot-json-schema": "^0.0.19",
     "@octokit/graphql": "^7.0.2",
-    "github-schema": "^1.1.2",
-    "ignore": "^5.2.4",
+    "github-schema": "^1.3.1",
+    "ignore": "^5.3.0",
     "minimatch": "^9.0.3",
-    "valibot": "^0.20.1",
+    "valibot": "^0.21.0",
     "yaml": "^2.3.4"
   }
 }
