chore(www): initial migration to astro

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,7 +1,4 @@
 {
-  "recommendations": [
-    "Vue.volar",
-    "Vue.vscode-typescript-vue-plugin",
-    "Nuxtr.nuxtr-vscode"
-  ]
+  "recommendations": ["astro-build.astro-vscode"],
+  "unwantedRecommendations": []
 }
