--- a/.gitignore
+++ b/.gitignore
@@ -1,20 +1,27 @@
-# misc
-node_modules
-.DS_Store
-*.tsbuildinfo
-
-# build outputs
-.output
-.data
-.nuxt
-.nitro
+# build output
 dist
-.turbo
+.output
 .vercel
-build
-out
 
-# env
+# generated types
+.nuxt
+.astro
+
+# dependencies
+node_modules
+
+# logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+
+# environment variables
 .env
-.env.*
-!.env.example
+.env.production
+
+# macOS-specific files
+.DS_Store
+
+# turbo
+.turbo
