--- a/www/package.json
+++ b/www/package.json
@@ -19,10 +19,12 @@
     "github-schema": "^1.3.1"
   },
   "devDependencies": {
+    "@astrojs/check": "^0.3.1",
     "@unocss/eslint-plugin": "^0.57.7",
     "@unocss/reset": "^0.57.7",
     "astro-eslint-parser": "^0.16.0",
     "eslint-plugin-astro": "^0.30.0",
+    "typescript": "^5.3.2",
     "unocss": "^0.57.7"
   }
 }
