chore(www): initial migration to astro (#25)

--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "name": "@luxass/projectrc-monorepo",
+  "description": "Monorepo for @luxass/projectrc",
   "type": "module",
   "private": true,
-  "packageManager": "pnpm@8.11.0",
-  "description": "Monorepo for @luxass/projectrc",
   "author": {
     "name": "Lucas Nørgård",
     "email": "lucasnrgaard@gmail.com",
     "url": "https://luxass.dev"
   },
+  "packageManager": "pnpm@8.11.0",
   "license": "MIT",
   "homepage": "https://github.com/luxass/projectrc",
   "repository": {
@@ -31,8 +31,7 @@
     "dev": "turbo run dev --concurrency=40 --parallel",
     "lint": "turbo run lint",
     "test": "turbo run test",
-    "typecheck": "turbo run typecheck",
-    "update:schema": "npx tsx ./scripts/update-schema.ts"
+    "typecheck": "turbo run typecheck"
   },
   "devDependencies": {
     "@luxass/eslint-config": "^4.0.0-beta.13",
@@ -43,7 +42,6 @@
     "tsup": "^8.0.1",
     "turbo": "^1.10.16",
     "typescript": "^5.3.2",
-    "vitest": "^0.34.6",
-    "vitest-fetch-mock": "^0.2.2"
+    "vitest": "^0.34.6"
   }
 }
