--- a/www/package.json
+++ b/www/package.json
@@ -3,33 +3,28 @@
   "type": "module",
   "private": true,
   "scripts": {
-    "build": "nuxt build",
-    "dev": "nuxt dev --dotenv ../.env",
-    "generate": "nuxt generate",
-    "preview": "nuxt preview",
-    "postinstall": "nuxt prepare",
+    "dev": "astro dev",
+    "start": "astro dev",
+    "build": "astro check && astro build",
+    "preview": "astro preview",
+    "astro": "astro",
     "lint": "eslint .",
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "@astrojs/vercel": "^5.2.0",
     "@luxass/projectrc": "workspace:*",
     "@octokit/graphql": "^7.0.2",
-    "@sinclair/typebox": "^0.31.28",
-    "@vercel/analytics": "^1.1.1",
-    "ajv": "^8.12.0",
-    "ajv-formats": "^2.1.1",
+    "astro": "^3.6.4",
     "github-schema": "^1.3.1"
   },
   "devDependencies": {
-    "@nuxt/devtools": "latest",
-    "@nuxtjs/color-mode": "^3.3.2",
-    "@unocss/nuxt": "^0.57.7",
-    "@vueuse/nuxt": "^10.6.1",
-    "nuxt": "^3.8.2",
-    "nuxt-icon": "^0.6.6",
-    "nuxt-og-image": "^2.2.4",
-    "shikiji": "^0.7.5",
-    "vue": "^3.3.9",
-    "vue-router": "^4.2.5"
+    "@astrojs/check": "^0.3.1",
+    "@unocss/eslint-plugin": "^0.57.7",
+    "@unocss/reset": "^0.57.7",
+    "astro-eslint-parser": "^0.16.0",
+    "eslint-plugin-astro": "^0.30.0",
+    "typescript": "^5.3.2",
+    "unocss": "^0.57.7"
   }
 }
