--- a/package.json
+++ b/package.json
@@ -30,14 +30,13 @@
     "build": "turbo run build",
     "dev": "turbo run dev --concurrency=40 --parallel",
     "lint": "turbo run lint",
-    "test": "turbo run test",
+    "test": "turbo run test -- --run",
+    "test:watch": "turbo run test",
     "typecheck": "turbo run typecheck"
   },
   "devDependencies": {
     "@luxass/eslint-config": "^4.0.0-beta.13",
-    "@sinclair/typebox": "^0.31.28",
     "@types/node": "^18.18.8",
-    "dotenv": "^16.3.1",
     "eslint": "^8.54.0",
     "tsup": "^8.0.1",
     "turbo": "^1.10.16",
