--- a/www/package.json
+++ b/www/package.json
@@ -12,6 +12,7 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "@astrojs/mdx": "^1.1.5",
     "@astrojs/vercel": "^5.2.0",
     "@luxass/projectrc": "workspace:*",
     "@octokit/graphql": "^7.0.2",
@@ -20,11 +21,18 @@
   },
   "devDependencies": {
     "@astrojs/check": "^0.3.1",
+    "@iconify-json/carbon": "^1.1.24",
+    "@iconify-json/octicon": "^1.1.51",
+    "@iconify-json/twemoji": "^1.1.14",
+    "@types/mdast": "^4.0.3",
     "@unocss/eslint-plugin": "^0.57.7",
     "@unocss/reset": "^0.57.7",
     "astro-eslint-parser": "^0.16.0",
+    "escape-string-regexp": "^5.0.0",
     "eslint-plugin-astro": "^0.30.0",
     "typescript": "^5.3.2",
+    "unified": "^11.0.4",
+    "unist-util-visit": "^5.0.0",
     "unocss": "^0.57.7"
   }
 }
