--- a/packages/projectrc/package.json
+++ b/packages/projectrc/package.json
@@ -67,6 +67,7 @@
     "yaml": "^2.3.4"
   },
   "devDependencies": {
-    "@types/json-schema": "^7.0.15"
+    "@types/json-schema": "^7.0.15",
+    "msw": "^2.0.9"
   }
 }
