--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "build": "turbo run build",
     "dev": "turbo run dev --concurrency=40 --parallel",
     "lint": "turbo run lint",
-    "test": "turbo run test -- --run",
+    "test": "turbo run test",
     "test:watch": "turbo run test",
     "typecheck": "turbo run typecheck"
   },
