--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -1,12 +1,15 @@
 # See https://github.com/actions/labeler
 
 "pkg: projectrc":
-  - packages/projectrc/**
+  - changed-files:
+      - packages/projectrc/**
 
 "apps: www":
-  - www/**
+  - changed-files:
+      - www/**
 
 🚨 schema:
-  - scripts/update-schema.ts
-  - packages/projectrc/schema.json
-  - packages/projectrc/src/schema.ts
+  - changed-files:
+      - scripts/update-schema.ts
+      - packages/projectrc/schema.json
+      - packages/projectrc/src/schema.ts
