chore: release v2.0.0-beta.0

--- a/packages/projectrc/package.json
+++ b/packages/projectrc/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@luxass/projectrc",
-  "version": "1.4.0",
+  "version": "2.0.0-beta.0",
   "description": "Utils for .projectrc",
   "type": "module",
   "author": {
