--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "@luxass/projectrc-monorepo",
+  "version": "2.0.0-beta.0",
   "description": "Monorepo for @luxass/projectrc",
   "type": "module",
   "private": true,
@@ -42,6 +43,5 @@
     "turbo": "^1.11.0",
     "typescript": "^5.3.2",
     "vitest": "^1.0.1"
-  },
-  "version": "2.0.0-beta.0"
+  }
 }
