--- a/package.json
+++ b/package.json
@@ -30,18 +30,19 @@
   "scripts": {
     "build": "turbo run build",
     "dev": "turbo run dev --concurrency=40 --parallel",
-    "lint": "turbo run lint",
+    "lint": "eslint . --report-unused-disable-directives",
     "test": "turbo run test",
     "test:watch": "turbo run test",
     "typecheck": "turbo run typecheck"
   },
   "devDependencies": {
-    "@luxass/eslint-config": "^4.0.0-beta.13",
+    "@luxass/eslint-config": "^4.0.0-beta.16",
     "@types/node": "^18.18.8",
     "eslint": "^8.55.0",
+    "eslint-plugin-format": "^0.1.0",
     "tsup": "^8.0.1",
-    "turbo": "^1.11.0",
-    "typescript": "^5.3.2",
-    "vitest": "^1.0.1"
+    "turbo": "^1.11.1",
+    "typescript": "^5.3.3",
+    "vitest": "^1.0.2"
   }
 }
