test(projectrc): add more tests (#32)

--- a/.github/projectrc.json
+++ b/.github/projectrc.json
@@ -1,7 +1,4 @@
 {
   "$schema": "https://projectrc.luxass.dev/schema",
-  "website": true,
-  "handles": [
-    "/projectrc"
-  ]
+  "website": true
 }
