--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@luxass/projectrc-monorepo",
-  "version": "2.0.0-beta.4",
+  "version": "2.0.0",
   "description": "Monorepo for @luxass/projectrc",
   "type": "module",
   "private": true,
