--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
   "name": "@luxass/projectrc-monorepo",
-  "version": "2.0.0",
   "description": "Monorepo for @luxass/projectrc",
   "type": "module",
   "private": true,
@@ -33,7 +32,8 @@
     "lint": "eslint . --report-unused-disable-directives",
     "test": "turbo run test",
     "test:watch": "turbo run test",
-    "typecheck": "turbo run typecheck"
+    "typecheck": "turbo run typecheck",
+    "bump": "npx bumpp packages/projectrc/package.json"
   },
   "devDependencies": {
     "@luxass/eslint-config": "^4.0.0-beta.16",
