--- a/packages/projectrc/package.json
+++ b/packages/projectrc/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@luxass/projectrc",
-  "version": "2.0.0-beta.4",
+  "version": "2.0.1",
   "description": "Utils for .projectrc",
   "type": "module",
   "author": {
