--- a/.gitignore
+++ b/.gitignore
@@ -1,27 +1,36 @@
-# build output
-dist
-.output
-.vercel
-
-# generated types
-.nuxt
-.astro
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
-node_modules
+/node_modules
+/.pnp
+.pnp.js
+.yarn/install-state.gz
 
-# logs
+# testing
+/coverage
+
+# next.js
+/.next/
+/out/
+
+# production
+/build
+
+# misc
+.DS_Store
+*.pem
+
+# debug
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-pnpm-debug.log*
 
-# environment variables
-.env
-.env.production
+# local env files
+.env*.local
 
-# macOS-specific files
-.DS_Store
+# vercel
+.vercel
 
-# turbo
-.turbo
+# typescript
+*.tsbuildinfo
+next-env.d.ts
