--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,3 @@
 {
-  "typescript.tsdk": "node_modules/typescript/lib",
-  "unocss.root": ["www"]
+  "typescript.tsdk": "node_modules/typescript/lib"
 }
