--- a/package.json
+++ b/package.json
@@ -1,48 +1,39 @@
 {
-  "name": "@luxass/projectrc-monorepo",
-  "description": "Monorepo for @luxass/projectrc",
+  "name": "projectrc-web",
+  "version": "0.1.0",
   "type": "module",
   "private": true,
-  "author": {
-    "name": "Lucas Nørgård",
-    "email": "lucasnrgaard@gmail.com",
-    "url": "https://luxass.dev"
-  },
-  "packageManager": "pnpm@8.12.1",
-  "license": "MIT",
-  "homepage": "https://github.com/luxass/projectrc",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/luxass/projectrc",
-    "directory": "www"
-  },
-  "bugs": {
-    "url": "https://github.com/luxass/projectrc/issues"
-  },
-  "workspaces": [
-    "www",
-    "packages/*"
-  ],
-  "engines": {
-    "node": ">=18"
-  },
+  "packageManager": "pnpm@8.13.1",
   "scripts": {
-    "build": "turbo run build",
-    "dev": "turbo run dev --concurrency=40 --parallel",
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
     "lint": "eslint . --report-unused-disable-directives",
-    "test": "turbo run test",
-    "test:watch": "turbo run test",
-    "typecheck": "turbo run typecheck",
-    "bump": "npx bumpp packages/projectrc/package.json"
+    "typecheck": "tsc --noEmit"
+  },
+  "dependencies": {
+    "@gcornut/valibot-json-schema": "^0.0.19",
+    "next": "^14.0.4",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "valibot": "^0.25.0"
   },
   "devDependencies": {
-    "@luxass/eslint-config": "^4.0.0-beta.17",
+    "@luxass/eslint-config": "^4.0.1",
+    "@next/eslint-plugin-next": "^14.0.4",
+    "@types/json-schema": "^7.0.15",
     "@types/node": "^18.18.8",
+    "@types/react": "^18.2.46",
+    "@types/react-dom": "^18.2.18",
+    "autoprefixer": "^10.4.16",
     "eslint": "^8.56.0",
     "eslint-plugin-format": "^0.1.0",
-    "tsup": "^8.0.1",
-    "turbo": "^1.11.2",
-    "typescript": "^5.3.3",
-    "vitest": "^1.0.4"
+    "eslint-plugin-react": "^7.33.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-refresh": "^0.4.5",
+    "eslint-plugin-tailwindcss": "^3.13.1",
+    "postcss": "^8.4.32",
+    "tailwindcss": "^3.4.0",
+    "typescript": "^5.3.3"
   }
 }
