--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "eslint-plugin-react-refresh": "^0.4.5",
     "eslint-plugin-tailwindcss": "^3.13.1",
     "postcss": "^8.4.32",
+    "shikiji": "^0.9.17",
     "tailwindcss": "^3.4.0",
     "typescript": "^5.3.3"
   }
