--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "type": "module",
   "private": true,
-  "packageManager": "pnpm@8.13.1",
+  "packageManager": "pnpm@8.14.0",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -13,21 +13,24 @@
   },
   "dependencies": {
     "@gcornut/valibot-json-schema": "^0.0.19",
+    "ignore": "^5.3.0",
     "next": "^14.0.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "valibot": "^0.25.0"
+    "valibot": "^0.25.0",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@egoist/tailwindcss-icons": "^1.7.1",
-    "@iconify-json/carbon": "^1.1.26",
-    "@iconify-json/lucide": "^1.1.150",
+    "@iconify-json/carbon": "^1.1.27",
+    "@iconify-json/lucide": "^1.1.151",
     "@iconify-json/octicon": "^1.1.52",
     "@iconify-json/twemoji": "^1.1.15",
     "@luxass/eslint-config": "^4.0.1",
     "@next/eslint-plugin-next": "^14.0.4",
+    "@octokit/graphql": "^7.0.2",
     "@types/json-schema": "^7.0.15",
-    "@types/node": "^18.18.8",
+    "@types/node": "^18.19.4",
     "@types/react": "^18.2.46",
     "@types/react-dom": "^18.2.18",
     "autoprefixer": "^10.4.16",
@@ -37,9 +40,11 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
     "eslint-plugin-tailwindcss": "^3.13.1",
-    "postcss": "^8.4.32",
+    "github-schema": "^1.4.1",
+    "postcss": "^8.4.33",
     "shikiji": "^0.9.17",
     "tailwindcss": "^3.4.0",
-    "typescript": "^5.3.3"
+    "typescript": "^5.3.3",
+    "zod-to-json-schema": "^3.22.3"
   }
 }
