--- a/package.json
+++ b/package.json
@@ -12,12 +12,10 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "@gcornut/valibot-json-schema": "^0.0.19",
     "ignore": "^5.3.0",
     "next": "^14.0.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "valibot": "^0.25.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
@@ -41,6 +39,7 @@
     "eslint-plugin-react-refresh": "^0.4.5",
     "eslint-plugin-tailwindcss": "^3.13.1",
     "github-schema": "^1.4.1",
+    "minimatch": "^9.0.3",
     "postcss": "^8.4.33",
     "shikiji": "^0.9.17",
     "tailwindcss": "^3.4.0",
