--- a/package.json
+++ b/package.json
@@ -3,52 +3,49 @@
   "version": "0.1.0",
   "type": "module",
   "private": true,
-  "packageManager": "pnpm@8.14.0",
+  "packageManager": "pnpm@8.14.1",
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint",
+    "dev": "astro dev",
+    "start": "astro dev",
+    "fast:build": "astro check && astro build",
+    "build": "astro check && eslint . --report-unused-disable-directives && tsc --noEmit && astro build",
+    "preview": "astro preview",
+    "astro": "astro",
+    "lint": "eslint . --report-unused-disable-directives",
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "ignore": "^5.3.0",
-    "next": "14.0.4",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "zod": "^3.22.4"
-  },
-  "devDependencies": {
-    "@egoist/tailwindcss-icons": "^1.7.2",
+    "@astrojs/check": "^0.4.1",
+    "@astrojs/rss": "^4.0.2",
+    "@astrojs/sitemap": "^3.0.4",
+    "@astrojs/solid-js": "^4.0.1",
+    "@astrojs/vercel": "^6.1.4",
     "@iconify-json/carbon": "^1.1.27",
-    "@iconify-json/lucide": "^1.1.152",
+    "@iconify-json/lucide": "^1.1.154",
     "@iconify-json/octicon": "^1.1.52",
     "@iconify-json/twemoji": "^1.1.15",
-    "@luxass/eslint-config": "^4.1.0",
-    "@next/eslint-plugin-next": "^14.0.4",
+    "@luxass/eslint-config": "^4.2.1",
     "@octokit/graphql": "^7.0.2",
-    "@types/json-schema": "^7.0.15",
     "@types/node": "^18.19.4",
-    "@types/react": "^18.2.47",
-    "@types/react-dom": "^18.2.18",
-    "autoprefixer": "^10.4.16",
+    "astro": "^4.1.2",
     "eslint": "^8.56.0",
-    "eslint-plugin-format": "^0.1.0",
-    "eslint-plugin-react": "^7.33.2",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.5",
-    "eslint-plugin-tailwindcss": "^3.13.1",
-    "github-schema": "^1.4.1",
+    "github-schema": "^1.5.1",
+    "ignore": "^5.3.0",
+    "markdown-it": "^14.0.0",
     "minimatch": "^9.0.3",
-    "postcss": "^8.4.33",
-    "shikiji": "^0.9.18",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5.3.3",
+    "sanitize-html": "^2.11.0",
+    "shikiji": "^0.9.19",
+    "solid-js": "^1.8.11",
+    "zod": "^3.22.4",
     "zod-to-json-schema": "^3.22.3"
   },
-  "pnpm": {
-    "patchedDependencies": {
-      "next@14.0.4": "patches/next@14.0.4.patch"
-    }
+  "devDependencies": {
+    "@types/markdown-it": "^13.0.7",
+    "@types/sanitize-html": "^2.9.5",
+    "@unocss/eslint-plugin": "^0.58.3",
+    "@unocss/reset": "^0.58.3",
+    "eslint-plugin-solid": "^0.13.1",
+    "typescript": "^5.3.3",
+    "unocss": "^0.58.3"
   }
 }
