--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@types/sanitize-html": "^2.9.5",
     "@unocss/eslint-plugin": "^0.58.3",
     "@unocss/reset": "^0.58.3",
+    "eslint-plugin-format": "^0.1.0",
     "eslint-plugin-solid": "^0.13.1",
     "typescript": "^5.3.3",
     "unocss": "^0.58.3"
