--- a/vercel.json
+++ b/vercel.json
@@ -26,6 +26,10 @@
         {
           "key": "Cache-Control",
           "value": "public, s-maxage=3600, must-revalidate"
+        },
+        {
+          "key": "Content-Disposition",
+          "value": "inline; filename=\"zod-schema.ts\""
         }
       ]
     },
