--- a/.github/projectrc.json
+++ b/.github/projectrc.json
@@ -1,4 +1,4 @@
 {
-  "$schema": "https://projectrc.luxass.dev/schema",
+  "$schema": "https://projectrc.luxass.dev/schema.json",
   "website": true
 }
