--- a/package.json
+++ b/package.json
@@ -16,29 +16,39 @@
   "dependencies": {
     "@astrojs/check": "^0.4.1",
     "@astrojs/rss": "^4.0.2",
-    "@astrojs/sitemap": "^3.0.4",
+    "@astrojs/sitemap": "^3.0.5",
     "@astrojs/solid-js": "^4.0.1",
-    "@astrojs/vercel": "^6.1.4",
+    "@astrojs/vercel": "^7.0.0",
     "@iconify-json/carbon": "^1.1.27",
-    "@iconify-json/lucide": "^1.1.154",
+    "@iconify-json/lucide": "^1.1.156",
     "@iconify-json/octicon": "^1.1.52",
     "@iconify-json/twemoji": "^1.1.15",
-    "@luxass/eslint-config": "^4.2.1",
+    "@luxass/eslint-config": "^4.2.4",
     "@octokit/graphql": "^7.0.2",
-    "astro": "^4.1.2",
+    "astro": "^4.2.1",
     "eslint": "^8.56.0",
-    "github-schema": "^1.5.1",
+    "github-schema": "^1.6.2",
+    "hastscript": "^8.0.0",
     "ignore": "^5.3.0",
     "markdown-it": "^14.0.0",
+    "mdast-util-definitions": "^6.0.0",
     "minimatch": "^9.0.3",
+    "remark": "^15.0.1",
+    "remark-directive": "^3.0.0",
     "sanitize-html": "^2.11.0",
     "shikiji": "^0.9.19",
     "solid-js": "^1.8.11",
+    "unified": "^11.0.4",
+    "unist-util-is": "^6.0.0",
+    "unist-util-remove": "^4.0.0",
+    "unist-util-visit": "^5.0.0",
     "zod": "^3.22.4",
     "zod-to-json-schema": "^3.22.3"
   },
   "devDependencies": {
+    "@types/hast": "^3.0.3",
     "@types/markdown-it": "^13.0.7",
+    "@types/mdast": "^4.0.3",
     "@types/node": "^18.19.6",
     "@types/sanitize-html": "^2.9.5",
     "@unocss/eslint-plugin": "^0.58.3",
