--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "type": "module",
   "private": true,
-  "packageManager": "pnpm@8.14.1",
+  "packageManager": "pnpm@8.14.3",
   "scripts": {
     "dev": "astro dev",
     "start": "astro dev",
@@ -15,20 +15,22 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.4.1",
-    "@astrojs/rss": "^4.0.2",
+    "@astrojs/rss": "^4.0.4",
     "@astrojs/sitemap": "^3.0.5",
     "@astrojs/solid-js": "^4.0.1",
-    "@astrojs/vercel": "^7.0.0",
-    "@iconify-json/carbon": "^1.1.27",
-    "@iconify-json/lucide": "^1.1.156",
+    "@astrojs/vercel": "^7.0.2",
+    "@iconify-json/carbon": "^1.1.28",
+    "@iconify-json/lucide": "^1.1.159",
     "@iconify-json/octicon": "^1.1.52",
     "@iconify-json/twemoji": "^1.1.15",
-    "@luxass/eslint-config": "^4.2.4",
+    "@luxass/eslint-config": "^4.2.6",
     "@octokit/graphql": "^7.0.2",
-    "astro": "^4.2.1",
+    "@octokit/rest": "^20.0.2",
+    "astro": "^4.2.6",
+    "consola": "^3.2.3",
     "eslint": "^8.56.0",
-    "github-schema": "^1.6.2",
-    "hastscript": "^8.0.0",
+    "github-schema": "^1.6.3",
+    "hastscript": "^9.0.0",
     "ignore": "^5.3.0",
     "markdown-it": "^14.0.0",
     "mdast-util-definitions": "^6.0.0",
@@ -36,8 +38,8 @@
     "remark": "^15.0.1",
     "remark-directive": "^3.0.0",
     "sanitize-html": "^2.11.0",
-    "shikiji": "^0.9.19",
-    "solid-js": "^1.8.11",
+    "shikiji": "^0.10.2",
+    "solid-js": "^1.8.12",
     "unified": "^11.0.4",
     "unist-util-generated": "^3.0.0",
     "unist-util-is": "^6.0.0",
@@ -52,11 +54,11 @@
     "@types/mdast": "^4.0.3",
     "@types/node": "^18.19.6",
     "@types/sanitize-html": "^2.9.5",
-    "@unocss/eslint-plugin": "^0.58.3",
-    "@unocss/reset": "^0.58.3",
+    "@unocss/eslint-plugin": "^0.58.4",
+    "@unocss/reset": "^0.58.4",
     "eslint-plugin-format": "^0.1.0",
     "eslint-plugin-solid": "^0.13.1",
     "typescript": "^5.3.3",
-    "unocss": "^0.58.3"
+    "unocss": "^0.58.4"
   }
 }
