--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "type": "module",
   "private": true,
-  "packageManager": "pnpm@8.15.3",
+  "packageManager": "pnpm@8.15.4",
   "scripts": {
     "dev": "astro dev",
     "start": "astro dev",
@@ -14,22 +14,22 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "@astrojs/check": "^0.5.4",
+    "@astrojs/check": "^0.5.9",
     "@astrojs/rss": "^4.0.5",
-    "@astrojs/sitemap": "^3.0.5",
+    "@astrojs/sitemap": "^3.1.1",
     "@astrojs/solid-js": "^4.0.1",
-    "@astrojs/vercel": "^7.3.1",
-    "@iconify-json/carbon": "^1.1.30",
-    "@iconify-json/lucide": "^1.1.165",
+    "@astrojs/vercel": "^7.3.6",
+    "@iconify-json/carbon": "^1.1.31",
+    "@iconify-json/lucide": "^1.1.174",
     "@iconify-json/octicon": "^1.1.52",
     "@iconify-json/twemoji": "^1.1.15",
-    "@luxass/eslint-config": "^4.2.6",
-    "@octokit/graphql": "^7.0.2",
+    "@luxass/eslint-config": "^4.2.10",
+    "@octokit/graphql": "^8.0.1",
     "@octokit/rest": "^20.0.2",
-    "astro": "^4.4.0",
+    "astro": "^4.5.5",
     "consola": "^3.2.3",
-    "eslint": "^8.56.0",
-    "github-schema": "^1.7.1",
+    "eslint": "^8.57.0",
+    "github-schema": "^1.7.3",
     "hastscript": "^9.0.0",
     "ignore": "^5.3.1",
     "markdown-it": "^14.0.0",
@@ -37,7 +37,7 @@
     "minimatch": "^9.0.3",
     "remark": "^15.0.1",
     "remark-directive": "^3.0.0",
-    "sanitize-html": "^2.11.0",
+    "sanitize-html": "^2.12.1",
     "shikiji": "^0.10.2",
     "solid-js": "^1.8.15",
     "unified": "^11.0.4",
@@ -54,12 +54,15 @@
     "@types/mdast": "^4.0.3",
     "@types/node": "^18.19.6",
     "@types/sanitize-html": "^2.11.0",
-    "@unocss/eslint-plugin": "^0.58.5",
-    "@unocss/reset": "^0.58.5",
+    "@unocss/eslint-plugin": "^0.58.6",
+    "@unocss/reset": "^0.58.6",
+    "astro-eslint-parser": "^0.16.3",
+    "eslint-plugin-astro": "^0.31.4",
     "eslint-plugin-format": "^0.1.0",
     "eslint-plugin-solid": "^0.13.1",
-    "typescript": "^5.3.3",
-    "unocss": "^0.58.5",
-    "vite": "^5.1.3"
+    "prettier-plugin-astro": "^0.13.0",
+    "typescript": "^5.4.2",
+    "unocss": "^0.58.6",
+    "vite": "^5.1.6"
   }
 }
