--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,3 @@
 {
-  "extends": "astro/tsconfigs/strict",
-  "compilerOptions": {
-    "jsx": "preserve",
-    "jsxImportSource": "solid-js",
-    "paths": {
-      "~/*": ["./src/*"]
-    }
-  }
+  "extends": "astro/tsconfigs/strict"
 }
