--- a/vercel.json
+++ b/vercel.json
@@ -12,6 +12,23 @@
       ]
     },
     {
+      "source": "/json-schema",
+      "headers": [
+        {
+          "key": "Content-Type",
+          "value": "application/json"
+        },
+        {
+          "key": "Cache-Control",
+          "value": "public, s-maxage=3600, must-revalidate"
+        },
+        {
+          "key": "Content-Disposition",
+          "value": "inline"
+        }
+      ]
+    },
+    {
       "source": "/api/v1/projects.json",
       "headers": [
         {
