--- a/vercel.json
+++ b/vercel.json
@@ -25,6 +25,10 @@
         {
           "key": "Content-Disposition",
           "value": "inline"
+        },
+        {
+          "key": "X-Content-Type-Options",
+          "value": "nosniff"
         }
       ]
     },
