--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "unist-util-remove": "^4.0.0",
     "unist-util-visit": "^5.0.0",
     "zod": "^3.23.8",
+    "zod-error-utils": "^0.2.0",
     "zod-to-json-schema": "^3.23.1"
   },
   "devDependencies": {
