--- a/package.json
+++ b/package.json
@@ -14,20 +14,21 @@
     "typecheck": "astro-check"
   },
   "dependencies": {
-    "@astrojs/check": "^0.8.0",
+    "@astrojs/check": "^0.8.1",
     "@astrojs/rss": "^4.0.7",
     "@astrojs/vercel": "^7.7.2",
     "@iconify-json/carbon": "^1.1.36",
-    "@iconify-json/lucide": "^1.1.198",
+    "@iconify-json/lucide": "^1.1.199",
     "@iconify-json/octicon": "^1.1.55",
     "@iconify-json/twemoji": "^1.1.15",
-    "@luxass/eslint-config": "^4.8.3",
+    "@luxass/eslint-config": "^4.9.0",
     "@octokit/graphql": "^8.1.1",
     "@octokit/rest": "^21.0.0",
     "astro": "^4.11.5",
+    "astro-icon": "^1.1.0",
     "consola": "^3.2.3",
     "eslint": "^9.6.0",
-    "github-schema": "^1.10.1",
+    "github-schema": "^1.10.2",
     "hastscript": "^9.0.0",
     "ignore": "^5.3.1",
     "markdown-it": "^14.1.0",
