--- a/package.json
+++ b/package.json
@@ -1,61 +1,46 @@
 {
-  "name": "projectrc",
-  "version": "0.1.0",
+  "name": "mosaic-monorepo",
+  "description": "Monorepo for mosaic",
   "type": "module",
   "private": true,
-  "packageManager": "pnpm@9.5.0",
-  "scripts": {
-    "dev": "astro dev",
-    "start": "astro dev",
-    "build": "astro check && pnpm lint && astro build",
-    "preview": "astro preview",
-    "astro": "astro",
-    "lint": "eslint .",
-    "typecheck": "astro-check"
+  "author": {
+    "name": "Lucas Nørgård",
+    "email": "lucasnrgaard@gmail.com",
+    "url": "https://luxass.dev"
   },
-  "dependencies": {
-    "@astrojs/check": "^0.8.1",
-    "@astrojs/vercel": "^7.7.2",
-    "@iconify-json/carbon": "^1.1.36",
-    "@iconify-json/lucide": "^1.1.199",
-    "@iconify-json/octicon": "^1.1.55",
-    "@iconify-json/twemoji": "^1.1.15",
-    "@luxass/eslint-config": "^4.9.0",
-    "@octokit/graphql": "^8.1.1",
-    "@octokit/rest": "^21.0.0",
-    "astro": "^4.11.5",
-    "astro-icon": "^1.1.0",
-    "consola": "^3.2.3",
-    "eslint": "^9.6.0",
-    "github-schema": "^1.10.2",
-    "hastscript": "^9.0.0",
-    "ignore": "^5.3.1",
-    "mdast-util-definitions": "^6.0.0",
-    "minimatch": "^10.0.1",
-    "remark": "^15.0.1",
-    "remark-directive": "^3.0.0",
-    "smol-toml": "^1.2.2",
-    "unified": "^11.0.5",
-    "unist-util-generated": "^3.0.0",
-    "unist-util-is": "^6.0.0",
-    "unist-util-remove": "^4.0.0",
-    "unist-util-visit": "^5.0.0",
-    "zod": "^3.23.8",
-    "zod-error-utils": "^0.2.0",
-    "zod-to-json-schema": "^3.23.1"
+  "packageManager": "pnpm@9.5.0",
+  "license": "MIT",
+  "homepage": "https://github.com/luxass/mosaic",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/luxass/mosaic"
+  },
+  "bugs": {
+    "url": "https://github.com/luxass/mosaic/issues"
+  },
+  "engines": {
+    "node": ">=20"
+  },
+  "scripts": {
+    "build": "turbo run build",
+    "dev": "turbo run dev",
+    "lint": "turbo run lint --continue -- --cache --cache-location node_modules/.cache/.eslintcache",
+    "lint:fix": "turbo run lint --continue -- --fix --cache --cache-location node_modules/.cache/.eslintcache",
+    "lint:ws": "pnpm dlx sherif@latest",
+    "test": "turbo run test",
+    "test:watch": "turbo run test:watch",
+    "typecheck": "turbo run typecheck",
+    "clean": "git clean -xdf node_modules",
+    "clean:workspaces": "turbo run clean",
+    "postinstall": "pnpm lint:ws"
   },
   "devDependencies": {
-    "@types/hast": "^3.0.4",
-    "@types/mdast": "^4.0.4",
-    "@types/node": "^20.14.9",
-    "@unocss/eslint-plugin": "^0.61.3",
-    "@unocss/reset": "^0.61.3",
-    "astro-eslint-parser": "^1.0.2",
-    "eslint-plugin-astro": "^1.2.3",
-    "eslint-plugin-format": "^0.1.2",
-    "prettier-plugin-astro": "^0.14.0",
+    "@luxass/eslint-config": "^4.9.0",
+    "@types/node": "^20.14.10",
+    "eslint": "^9.6.0",
+    "tsup": "^8.1.0",
+    "turbo": "^2.0.6",
     "typescript": "^5.5.3",
-    "unocss": "^0.61.3",
-    "vite": "^5.3.3"
+    "vitest": "^2.0.2"
   }
 }
