--- a/apps/www/package.json
+++ b/apps/www/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "projectrc",
+  "name": "website",
   "version": "0.1.0",
   "type": "module",
   "private": true,
@@ -21,12 +21,13 @@
     "@iconify-json/octicon": "^1.1.56",
     "@iconify-json/twemoji": "^1.1.15",
     "@luxass/eslint-config": "^4.9.0",
+    "@luxass/mosaic": "workspace:*",
     "@octokit/graphql": "^8.1.1",
     "@octokit/rest": "^21.0.0",
     "astro": "^4.11.5",
     "astro-icon": "^1.1.0",
     "consola": "^3.2.3",
-    "eslint": "^9.6.0",
+    "eslint": "^9.7.0",
     "github-schema": "^1.10.2",
     "hastscript": "^9.0.0",
     "ignore": "^5.3.1",
